@@ -30,7 +30,7 @@ public class TestQuantityFormatTag extends AbstractTagTestCase {
         _ctx.initialize(null, new CustomRequestWrapper(hreq), _rsp, "", false, 8192, false);
         
         _tag.setPageContext(_ctx);
-        _tag.setValue(new Integer(1));
+        _tag.setValue(Integer.valueOf(1));
         _tag.setSingle("widget");
         assertSkipBody(_tag.doStartTag());
         assertEvalPage(_tag.doEndTag());
